# oraclepack

./: .browser-echo-mcp.json  .codefetchignore  .env.example  .gitignore  .goreleaser.yaml  Fix oraclepack error.md  Integrate Glow into TUI.md  LICENSE  Oraclepack Validation Fix.md  README.md  TUI Runtime Overrides Implementation.md  Ticket-driven Surface Changes.md  actions.state.json  go.mod  go.sum  oracle-pack-2026-01-02.chatgpt-urls.json  oracle-pack-2026-01-02.state.json  oracle-pack-2026-01-07.report.json  oracle-pack-2026-01-07.state.json  oraclepack_bubble_tea_tui_runner_most_polished.md  package.json  pnpm-lock.yaml  tickets_prd.chatgpt-urls.json
.ck/: manifest.json  package.json.ck
.clinerules/: code_preservation.md
.ruler/: skill-usage.md  tm-AGENTS.md
.rules/: dev_workflow.md  rules.md  self_improve.md  taskmaster.md
.taskmaster/: config.json  oracle-pack-2026-01-02.md  state.json  tm_help.txt  tm_tags-help.txt
.tickets/: Formalize LLM Decision Points.md  Oraclepack Action Pack Integration.md  Oraclepack Action Pack Issue.md  Oraclepack Action Packs.md  Oraclepack CLI MCP Parity.md  (+12 more)
oraclepack-mcp-server/: README.md  inspector.config.json  pyproject.toml  requirements.txt
oraclepack-mcp-server/oraclepack_mcp_server/: __main__.py  config.py  oraclepack_cli.py  security.py  server.py  taskify.py
oraclepack-mcp-server/oraclepack_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
oraclepack-mcp-server/tests/: test_cli.py  test_config.py  test_integration.py  test_security.py  test_taskify.py
(+447 files in other folders)
